# ros_pi_ws

gripper_car_ws/src/applications/pick_and_place/: CMakeLists.txt
gripper_car_ws/src/applications/pick_and_place/config/: arm_poses.yaml  pick_and_place.yaml
gripper_car_ws/src/applications/pick_and_place/scripts/: arm_interface.py  pick_and_place_node.py  qr_scanner_node.py
gripper_car_ws/src/arm/arm_controller/: CMakeLists.txt  package.xml
gripper_car_ws/src/arm/arm_controller/launch/: arm_control.launch.py
gripper_car_ws/src/arm/arm_controller/scripts/: servo_bridge.py
gripper_car_ws/src/arm/arm_description/meshes/: gripper_base_link.STL  left_link.STL  link_1.STL  link_3.STL  link_4.STL  right_finger_link.STL  right_gear_link.STL  right_link.STL
gripper_car_ws/src/arm/arm_description/urdf/: arm.urdf.xacro  arm_macro.urdf.xacro
gripper_car_ws/src/arm/arm_moveit/: .setup_assistant  package.xml
gripper_car_ws/src/arm/arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mobile_arm_bot_2.ros2_control.xacro  mobile_arm_bot_2.srdf  ros2_controllers.yaml
gripper_car_ws/src/arm/arm_moveit/launch/: demo.launch.py  spawn_controllers.launch.py
gripper_car_ws/src/integration/mobile_manipulator_bringup/: CMakeLists.txt  package.xml
gripper_car_ws/src/integration/mobile_manipulator_bringup/config/: arm_controllers.yaml  bringup.rviz  simulation.rviz
gripper_car_ws/src/integration/mobile_manipulator_bringup/launch/: bringup.launch.py
gripper_car_ws/src/integration/mobile_manipulator_description/: CMakeLists.txt  package.xml
gripper_car_ws/src/integration/mobile_manipulator_description/launch/: display.launch.py
gripper_car_ws/src/integration/mobile_manipulator_description/urdf/: gazebo.xacro  ros2_control.xacro
gripper_car_ws/src/mobile_base/base_controller/: package.xml
gripper_car_ws/src/mobile_base/base_controller/config/: base_params.yaml
gripper_car_ws/src/mobile_base/base_controller/launch/: base_control.launch.py  hardware.launch.py  teleop.launch.py
gripper_car_ws/src/mobile_base/base_controller/scripts/: serial_bridge_node.py
gripper_car_ws/src/mobile_base/mobile_base_description/: package.xml
gripper_car_ws/src/mobile_base/mobile_base_description/config/: display.rviz
gripper_car_ws/src/mobile_base/mobile_base_description/launch/: display.launch.py
gripper_car_ws/src/mobile_base/mobile_base_description/urdf/: mobile_base.urdf.xacro
gripper_car_ws/src/mobile_base/mobile_base_gazebo/: CMakeLists.txt
gripper_car_ws/src/mobile_base/mobile_base_gazebo/config/: nav.rviz  sim.rviz
gripper_car_ws/src/mobile_base/mobile_base_gazebo/launch/: gazebo.launch.py
gripper_car_ws/src/mobile_base/mobile_base_gazebo/urdf/: gazebo.xacro
gripper_car_ws/src/mobile_base/mobile_base_gazebo/worlds/: empty.world  test_arena.world
gripper_car_ws/src/mobile_manipulator/mobile_manipulator_navigation/: CMakeLists.txt  package.xml
gripper_car_ws/src/mobile_manipulator/mobile_manipulator_navigation/config/: localisation_params.yaml  nav2_params.yaml
gripper_car_ws/src/mobile_manipulator/mobile_manipulator_navigation/launch/: navigation.launch.py  slam_mapping.launch.py
gripper_car_ws/src/navigation/navigation_bringup/: CMakeLists.txt
gripper_car_ws/src/navigation/navigation_bringup/config/: nav2_params.yaml
gripper_car_ws/src/sensors/camera_driver/: package.xml
gripper_car_ws/src/sensors/lidar_driver/: CMakeLists.txt  package.xml
gripper_car_ws/src/sensors/lidar_driver/config/: .gitkeep
gripper_car_ws/src/ydlidar_ros2_driver/: CMakeLists.txt
gripper_car_ws/src/ydlidar_ros2_driver/launch/: lidar_rviz.launch.py
gripper_car_ws/src/ydlidar_ros2_driver/params/: X2L.yaml
gripper_car_ws/src/ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp
gripper_car_ws/src/ydlidar_ros2_driver/urdf/: lidar.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/imu_pi_publisher/share/imu_pi_publisher/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/gripper_car_ws/: frames_2025-12-01_17.13.51.gv
src/gripper_car_ws/arduino/mobile_base_controller/: mobile_base_controller.ino
src/gripper_car_ws/arduino/motor_direction_test/: motor_direction_test.ino
src/gripper_car_ws/backup/archive/sensors/camera_driver/: CMakeLists.txt  package.xml
src/gripper_car_ws/backup/archive/sensors/camera_driver/config/: camera_params.yaml
src/gripper_car_ws/backup/archive/sensors/camera_driver/launch/: camera.launch.py
src/gripper_car_ws/backup/archive/sensors/lidar_driver/: CMakeLists.txt  package.xml
src/gripper_car_ws/backup/archive/sensors/lidar_driver/config/: lidar_params.yaml
src/gripper_car_ws/backup/archive/sensors/lidar_driver/launch/: lidar.launch.py
src/gripper_car_ws/backup/mobile_arm_pca9685_bridge/: mobile_arm_pca9685_bridge.ino
src/gripper_car_ws/src/applications/pick_and_place/: package.xml
src/gripper_car_ws/src/applications/pick_and_place/config/: locations.yaml
src/gripper_car_ws/src/applications/pick_and_place/launch/: pick_and_place.launch.py  qr_scanner.launch.py
src/gripper_car_ws/src/applications/pick_and_place/scripts/: location_manager.py  nav_interface.py
src/gripper_car_ws/src/arm/arm_description/: CMakeLists.txt  package.xml
src/gripper_car_ws/src/arm/arm_description/launch/: display.launch.py
src/gripper_car_ws/src/arm/arm_description/meshes/: base_link.STL  left_gear_link.STL
src/gripper_car_ws/src/arm/arm_description/urdf/: arm.urdf.xacro  test.xacro
src/gripper_car_ws/src/mobile_base/: README.md
src/gripper_car_ws/src/mobile_base/base_controller/: CMakeLists.txt
src/gripper_car_ws/src/mobile_base/base_controller/launch/: base_control.launch.py
src/gripper_car_ws/src/mobile_base/base_controller/scripts/: base_hardware_bridge.py  odom_publisher_node.py  teleop_keyboard.py
src/gripper_car_ws/src/mobile_base/mobile_base_gazebo/: package.xml
src/gripper_car_ws/src/mobile_base/mobile_base_gazebo/launch/: gazebo_with_nav.launch.py
src/imu_pi_publisher/: CMakeLists.txt
(+110 files in other folders)
