<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_manipulator_description</name>
  <version>1.0.0</version>
  <description>
    Combined URDF for mobile base + robotic arm manipulator.
    Integrates mobile_base_description and arm_description.

    Features:
    - Complete mobile manipulator URDF
    - ros2_control integration
    - Gazebo simulation support
  </description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>urdf</depend>
  <depend>mobile_base_description</depend>
  <depend>arm_description</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
