<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_base_description</name>
  <version>1.0.0</version>
  <description>
    URDF/Xacro description for 4-wheel differential drive mobile base.
    Plug-and-play: copy this package for mobile base visualization and simulation.

    Features:
    - 4-wheel differential drive platform
    - LiDAR sensor mount
    - Camera mount
    - Arm mounting point
  </description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
